fix scrollbar appearin on carousel

--- a/angular-cards/src/app/cards/carousel/carousel.component.scss
+++ b/angular-cards/src/app/cards/carousel/carousel.component.scss
@@ -12,6 +12,7 @@ button {
 /*carousel row*/
 #carousel-row {
   position: relative;
+  overflow-y: hidden !important;
   margin: 0;
 }
 /*navigation*/
